# run-sch

./: .gitignore  DESCRIPTION  Dockerfile  README.md  pyproject.toml  runFitting.sh  sch_fitting.R  sch_prior.R  setup_r_env.r
.github/workflows/: ci.yml
R/: amis_integration.R
sth_amis/: amis_integration.py
tests/: test_amis_integration.py
tests/testthat/: test-amis-integration.R
